# testcurve25519

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/icew4y/testcurve25519/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/icew4y/testcurve25519/: MainActivity.java
app/src/main/java/org/whispersystems/curve25519/: NativeCurve25519Provider.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/icew4y/testcurve25519/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
